Git_WGBH_QC/src/objects/Bios__c.object
<CustomObject>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Allied Health Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education &amp; Human Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Agricultural Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honors Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercollegiate Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberal Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifelong Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreational Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science and Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rating_Closeness__c</fullName>
        <label>Rating/Closeness</label>
        <picklist>
            <picklistValues>
                <fullName>A = $5M+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B= $1M-$4.9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C= $500k-$999,999k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D= $100k-$499,999k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E= $50k-$99,999k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F= Less than $50k</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Type__c</fullName>
        <label>Rating Type</label>
        <picklist>
            <picklistValues>
                <fullName>5 = Longshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4= Not Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3= Mid Range Closeness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2= Second Tier Closeness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1= Top Tier Closeness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Location__c</fullName>
        <label>Real Estate Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Value__c</fullName>
        <label>Real Estate Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipient_Charitable__c</fullName>
        <label>Recipient</label>
        <picklist>
            <picklistValues>
                <fullName>AIDS Action Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Antiquarian Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Ballet Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Ireland Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Repertory Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amherst College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Rescue League Fall River</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Rescue League of Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-Defamation League</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appalachian Mountain Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arcadia Players</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.C. High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball Hall of Fame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belmont Hill School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beth Israel Deaconess Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Brother Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Sister Association of Greater Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackside Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Athenaeum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Baroque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Latin School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Lyric Opera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Symphony Orchestra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boys &amp; Girls Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brandeis University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brigham &amp; Women&apos;s Hospital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordTypeText__c</fullName>
        <formula>CASE( RecordTypeId , 
&apos;012A0000000VF6BIAW&apos;,&apos;Prospective Student Interest&apos;,
&apos;012A0000000VGj0IAG&apos;,&apos;Athletics&apos;,
&apos;012A0000000UQ46IAG&apos;,&apos;Award&apos;,
&apos;012A0000000UQ47IAG&apos;,&apos;Employment&apos;,
&apos;012A0000000UQ48IAG&apos;,&apos;Financial&apos;,
&apos;012A0000000UQ49IAG&apos;,&apos;Education&apos;,
&apos;012A0000000UQ4AIAW&apos;,&apos;Membership&apos;,
&apos;012A0000000UQ4BIAW&apos;,&apos;Volunteering&apos;,
&apos;012A0000000VKx1IAG&apos;,&apos;Interest&apos;,
&apos;012A0000000VH6YIAW&apos;,&apos;Season Ticket Holder&apos;,
&apos;012A0000000VKwrIAG&apos;,&apos;Trustee&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifestyle/Hobby</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School Lookup</label>
        <referenceTo>Schools__c</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_of_Information__c</fullName>
        <label>Source of Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sport__c</fullName>
        <label>Sport</label>
        <picklist>
            <picklistValues>
                <fullName>Band</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheerleading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Football</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snowboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soccer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surfing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volleyball</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date Term Initiates</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(School__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy Of Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>concatenates the text from different Bio Record Types into a single field.  Each of the different Bio record types has a different page layout, and associated fields that make sense for the information we’re attempting to capture in the Bio record.</description>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TABio_Id__c</fullName>
        <description>TA Bio external Id</description>
        <externalId>true</externalId>
        <label>TA Bio Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Role__c</fullName>
        <label>Title/Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Topic Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Type Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gameshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@89.7, @GBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming, events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>directTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Of_Degree__c</fullName>
        <formula>MID(degree_year__c , 0, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of Degree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>Enter the year of the Contact&apos;s Degree year.</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <description>Account Id</description>
        <inlineHelpText>Account Id</inlineHelpText>
        <label>Account Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>confirm_implied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interests</description>
        <label>Confirm Implied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>degree_code__c</fullName>
        <description>Degree Code</description>
        <inlineHelpText>Degree Code</inlineHelpText>
        <label>Degree</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>degree_major__c</fullName>
        <description>Degree Major</description>
        <inlineHelpText>Enter the field for the major i.e. Accounting, Science, Engineering</inlineHelpText>
        <label>Major</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>degree_year__c</fullName>
        <description>Degree Year</description>
        <inlineHelpText>Degree Year</inlineHelpText>
        <label>Degree Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>education_begin_date__c</fullName>
        <description>Education Begin Date</description>
        <inlineHelpText>Education Begin Date</inlineHelpText>
        <label>Education Begin Date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>education_end_date__c</fullName>
        <description>Education End Date</description>
        <inlineHelpText>Education End Date</inlineHelpText>
        <label>Education End Date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>first_interest_source__c</fullName>
        <label>First Interest Source</label>
        <picklist>
            <picklistValues>
                <fullName>Pledge Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Telephone Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening by Volunteers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Poll/Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>first_interest_source_value__c</fullName>
        <description>First Interest Source</description>
        <inlineHelpText>First Interest Source</inlineHelpText>
        <label>First Interest Source Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_program__c</fullName>
        <label>First Program</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_program_description__c</fullName>
        <label>First Program Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>from_amount__c</fullName>
        <description>From Amount</description>
        <inlineHelpText>From Amount</inlineHelpText>
        <label>From Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_day__c</fullName>
        <description>Gift Day</description>
        <inlineHelpText>Gift Day</inlineHelpText>
        <label>Gift Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_month__c</fullName>
        <description>Gift Month</description>
        <inlineHelpText>Gift Month</inlineHelpText>
        <label>Gift Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_year__c</fullName>
        <description>Gift Year</description>
        <inlineHelpText>Gift Year</inlineHelpText>
        <label>Gift Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>give_date__c</fullName>
        <description>Give Date</description>
        <inlineHelpText>Give Date</inlineHelpText>
        <label>Give Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>giving_description__c</fullName>
        <description>Giving Description</description>
        <inlineHelpText>Giving Description</inlineHelpText>
        <label>Giving Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_code__c</fullName>
        <description>Interest Code</description>
        <inlineHelpText>Interest Code</inlineHelpText>
        <label>Interest</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_code_value__c</fullName>
        <description>Interest Code</description>
        <inlineHelpText>Interest Code</inlineHelpText>
        <label>Interest Code Value</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_comments__c</fullName>
        <label>Interest_Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_first_date__c</fullName>
        <description>Interest First Date</description>
        <inlineHelpText>Interest First Date</inlineHelpText>
        <label>Interest First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>interest_last_date__c</fullName>
        <description>Interest Last Date</description>
        <inlineHelpText>Interest Last Date</inlineHelpText>
        <label>Interest Last Date</label>
        <type>Date</type>
    </fields>
</CustomObject>